// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders with default theme max-width 1`] = `
<div
  className="ePjOdf"
/>
`;

exports[`Container renders with maxWidth 1`] = `
<div
  className="gQXXei"
/>
`;
